Object's Head structure